# distributed_load_dragging

./: README.md
experiments/: CMakeLists.txt  main.cpp
experiments/crazyflie_latency/: drone_latency.py
experiments/factor_graph_one_drone_one_step/: CMakeLists.txt  main.cpp  one_drone_no_ori_params.json  one_drone_no_ori_points.json  one_drone_with_ori_points.json  two_drones_no_ori_params.json  two_drones_no_ori_points.json  two_drones_with_ori_params.json  two_drones_with_ori_points.json
experiments/factor_graph_params_tuning/: .gitignore  CMakeLists.txt  README.md  main.cpp
experiments/factor_graph_params_tuning/data/: one_drone_points.json
experiments/metrics/: README.md  four_drones_with_height_and_ori.csv  four_drones_with_ori.csv  main.py  one_drone_no_ori.csv  one_drone_with_height.csv  one_drone_with_height_and_ori.csv  one_drone_with_ori.csv  simulation_data.csv  three_drones_with_height_and_ori.csv  three_drones_with_ori.csv  two2_drones_with_ori.csv  two_drones_no_ori.csv  two_drones_with_height.csv  two_drones_with_height_and_ori.csv  two_drones_with_ori.csv
experiments/metrics/output/: one_drone.csv
milestones/: meeting_notes.md
milestones/03-08-2025/: README.md
milestones/04-07-2025/: README.md
milestones/07-07-2025/: README.md
milestones/09-08-2025/: README.md
milestones/13-08-2025/: README.md
milestones/15-08-2025/: README.md
milestones/17-08-2025/: README.md
milestones/22-07-2025/: README.md
milestones/27-07-2025/: README.md
milestones/29-07-2025/: README.md
ros2_ws/: .gitignore
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_contoller_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_contoller_cpp/include/crazyflie_ros2_controller_cpp/: base_mpc.hpp
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_contoller_cpp/src/: a.cpp  mpc.cpp  mpc_multi_drone_with_height.cpp  mpc_multi_drone_with_height_and_ori.cpp  mpc_multi_drone_with_orientation.cpp  mpc_two_drones.cpp  mpc_two_drones_with_height_with_orientation.cpp  mpc_two_drones_with_orientation.cpp  mpc_with_height.cpp  mpc_with_orientation.cpp
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_controller/crazyflie_ros2_controller/: mpc.py  mpc_with_factor_graph.py
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_multiranger_bringup/: CMakeLists.txt
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_multiranger_bringup/config/: crazyflie_real_crazyswarm2.yaml  custom_config.rviz
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_multiranger_bringup/launch/: crazyflie_real.launch.py  simple_mapper_real.launch.py  simple_mapper_simulation.launch.py
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_trajectory_publisher/: package.xml  setup.cfg  setup.py
ros2_ws/src/crazyflie_ros2_multiranger/crazyflie_ros2_trajectory_publisher/crazyflie_ros2_trajectory_publisher/: load_path_publisher.py  trajectory_publisher.py
ros2_ws/src/crazyswarm2/crazyflie/scripts/: crazyflie_server.py
ros2_ws/src/factor_graph_lib/: CMakeLists.txt  package.xml
ros2_ws/src/factor_graph_lib/include/factor_graph_lib/: cable_factors.hpp  common.hpp  control_factors.hpp  dynamics_factors.hpp  dynamics_factors_multi_robots_with_angle.hpp  dynamics_factors_multi_robots_with_height.hpp  dynamics_factors_multi_robots_with_height_and_ori.hpp  dynamics_factors_with_angle.hpp  dynamics_factors_with_height.hpp  factor_executor.hpp  factor_executor_factory.hpp  factor_executor_multi_robot_with_height.hpp  factor_executor_multi_robot_with_height_and_ori.hpp  factor_executor_multi_robot_with_ori.hpp  factor_executor_single_robot.hpp  factor_executor_single_robot_with_height.hpp  factor_executor_single_robot_with_ori.hpp  factor_executor_two_robots.hpp  factor_executor_two_robots_with_ori.hpp
ros2_ws/src/factor_graph_lib/src/: cable_factors.cpp  control_factors.cpp  dynamics_factors.cpp
ros2_ws/src/phasespace_motion_capture/phasespace_client/rigid_body_objects/: Mona7_turtlebot_blue.json
ros2_ws/src/phasespace_motion_capture/phasespace_client/src/: psnode.cpp
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_bringup/config/: ros_gz_crazyflie_bridge.yaml  ros_gz_four_crazyflies_bridge.yaml  ros_gz_three_crazyflies_bridge.yaml  ros_gz_two_crazyflies_bridge.yaml
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_bringup/launch/: crazyflie_simulation.launch.py
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_control/ros_gz_crazyflie_control/: control_services.py
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_gazebo/models/crazyflie/: model.sdf
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_gazebo/models/crazyflie_01/: model.config  model.sdf
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_gazebo/models/crazyflie_02/: model.config  model.sdf
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_gazebo/models/crazyflie_03/: model.config  model.sdf
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_gazebo/models/crazyflie_04/: model.config  model.sdf
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_gazebo/models/load/: model.config  model.sdf
ros2_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_gazebo/worlds/: crazyflie_10_segments_bottom_world.sdf  crazyflie_2_segments_bottom_world.sdf  crazyflie_2_segments_middle_world.sdf  crazyflie_4_segments_middle_world.sdf  crazyflie_on_the_side_world.sdf  crazyflie_with_load_in_the_middle_world.sdf  crazyflie_with_load_many_segments_world.sdf  crazyflie_with_load_world.sdf  four_crazyflies_2_segments_middle_det_world.sdf  four_crazyflies_2_segments_middle_world.sdf  four_crazyflies_in_parallel_world.sdf  three_crazyflies_2_segments_middle_world.sdf  three_crazyflies_4_segments_middle_world.sdf  two_crazyflies_10_segments_bottom_world.sdf  two_crazyflies_2_segments_at_angle_world.sdf  two_crazyflies_2_segments_bottom_world.sdf  two_crazyflies_2_segments_middle_same_atp_world.sdf  two_crazyflies_2_segments_middle_world.sdf  two_crazyflies_4_segments_middle_same_atp_world.sdf  two_crazyflies_4_segments_middle_world.sdf
(+20 files in other folders)
